added new recipe images, since the old ones had the wrong size
added all 3 recipes to the design and adjusted their header colors, so they fit more with the theme of the dish

added a hover effect to the recipe cards, which scales them up slightly

--- a/index.html
+++ b/index.html
@@ -3,6 +3,7 @@
 <head>
     <meta charset="utf-8">
     <link rel="stylesheet" href="index.css">
+
     <title>Recipe App</title>
 
 </head>
@@ -11,14 +12,26 @@
     <div class="main-container">
         <h1>Odin Recipes</h1>
         <div class="recipe-list">
-            <div class="recipe">
+            <a href="recipes/gorgonzola_pasta.html">
+                <div class="recipe gorgonzola hover-scale-up">
+                    <div class="recipe-name">
+                        <h2>Gorgonzola Spinach Pasta</h2>
+                    </div>
+                    <img class="recipe-image" src="images/Gorgonzola.png">
+                </div>
+            </a>
+            <div class="recipe zucchini hover-scale-up">
+                <div class="recipe-name">
+                    <h2>Zucchini Casserole</h2>
+                </div>
+                <img class="recipe-image" src="images/Zucchini.png">
+            </div>
+            <div class="recipe chicken hover-scale-up">
                 <div class="recipe-name">
                     <h2>Spicy Thai Chicken</h2>
                 </div>
-                <img class="recipe-image" src="images/Mask group-1.png">
+                <img class="recipe-image" src="images/Spicy Thai Chicken.png">
             </div>
-            <div class="recipe">test</div>
-            <div class="recipe">test</div>
         </div>
     </div>
 
