--- a/recipes/gorgonzola_pasta.html
+++ b/recipes/gorgonzola_pasta.html
@@ -1,3 +1,59 @@
-<h1>Gorgonzola Spinach Pasta</h1>
+<!DOCTYPE html>
 
-<img src="https://cdn.gutekueche.de/media/recipe/72274/pasta-mit-spinat-gorgonzola-sauce.jpg">
+<head>
+    <meta charset="utf-8">
+    <link rel="stylesheet" href="gorgonzola_pasta.css">
+
+    <title>Recipe App</title>
+
+</head>
+
+<body>
+    <div class="main-container">
+
+        <div class="recipe">
+            <img src="../images/Gorgonzola Round.png" class="round-image" alt="">
+            <h1>Gorgonzola Spinach Pasta</h1>
+            <p class="description">This pasta with fresh spinach and creamy Gorgonzola sauce is one of those super quick
+                recipes that can be
+                ready in about 20 minutes. Use any kind of pasta and serve.</p>
+            <hr style="width:35%; text-align: center; height: 2px;color: black;">
+            <div class="times">
+                <h3>Total Time: 25 Minutes</h3>
+                <h3>Servings: 4</h3>
+            </div>
+            <h2>Ingredients</h2>
+            <ul>
+                <li>
+                    1 1/2 tablespoons of butter
+                </li>
+                <li>
+                    2 shallots, minced
+                </li>
+                <li>
+                    1 cup heavy whipping cream
+                </li>
+                <li>
+                    4 cups fresh spinach
+                </li>
+                <li>
+                    1/2 cup Gorgonzola cheese
+                </li>
+                <li>
+                    salt and freshly groudn black pepper to taste
+
+                </li>
+            </ul>
+            <h2>Directions</h2>
+            <ol>
+                <li>Bring a large pot of lightly salted water to a boil. Cook fusilli in boiling water, occasionally
+                    stirring, until tender yet firm to the bite, about 12 minutes.</li>
+                <li>In the meantime, melt butter in a skillet over medium heat and cook shallots until soft and
+                    translucent, 3 to 5 minutes. Pour in cream and cook until heated through, 3 to 5 minutes. Add
+                    spinach and crumble in Gorgonzola cheese. Season with salt and pepper and cook until spinach is
+                    wilted and sauce has thickened, about 4 minutes.</li>
+                <li>Drain fusilli and toss with sauce. Serve immediately.</li>
+            </ol>
+        </div>
+    </div>
+</body>
