added two other recipes using the same structure as the "Gorgonzola Spinach Pasta" also changed the title of the different recipes to match the recipe name

--- a/index.html
+++ b/index.html
@@ -20,19 +20,23 @@
                     <img class="recipe-image" src="images/Gorgonzola.png">
                 </div>
             </a>
-            <div class="recipe zucchini hover-scale-up">
-                <div class="recipe-name">
-                    <h2>Zucchini Casserole</h2>
+            <a href="recipes/zucchini_casserole.html">
+                <div class="recipe zucchini hover-scale-up">
+                    <div class="recipe-name">
+                        <h2>Zucchini Casserole</h2>
+                    </div>
+                    <img class="recipe-image" src="images/Zucchini.png">
                 </div>
-                <img class="recipe-image" src="images/Zucchini.png">
-            </div>
-            <div class="recipe chicken hover-scale-up">
-                <div class="recipe-name">
-                    <h2>Spicy Thai Chicken</h2>
+            </a>
+            <a href="recipes/spicy_chicken.html">
+                <div class="recipe chicken hover-scale-up">
+                    <div class="recipe-name">
+                        <h2>Spicy Thai Chicken</h2>
+                    </div>
+                    <img class="recipe-image" src="images/Spicy Thai Chicken.png">
                 </div>
-                <img class="recipe-image" src="images/Spicy Thai Chicken.png">
-            </div>
         </div>
+        </a>
     </div>
 
 
