--- a/recipes/gorgonzola_pasta.html
+++ b/recipes/gorgonzola_pasta.html
@@ -4,7 +4,7 @@
     <meta charset="utf-8">
     <link rel="stylesheet" href="gorgonzola_pasta.css">
 
-    <title>Recipe App</title>
+    <title>Gorgonzola Spinach Pasta</title>
 
 </head>
 
